--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="events">Events</string>
     <string name="series">Series</string>
     <string name="characters_intro">The women, men, organizations, alien species, deities, animals, non-corporeal entities, trans-dimensional manifestations, abstract personifications, and green amorphous blobs which occupy the Marvel Universe (and various alternate universes, timelines and altered realities therein).</string>
+    <string name="comics_intro">Individual print and digital comic issues, collections and graphic novels.</string>
 </resources>
