--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="series">Series</string>
     <string name="characters_intro">The women, men, organizations, alien species, deities, animals, non-corporeal entities, trans-dimensional manifestations, abstract personifications, and green amorphous blobs which occupy the Marvel Universe (and various alternate universes, timelines and altered realities therein).</string>
     <string name="comics_intro">Individual print and digital comic issues, collections and graphic novels.</string>
+    <string name="events_intro">Big, universe-altering storylines.</string>
+    <string name="series_intro">Sequentially numbered (well, mostly sequentially numbered) groups comics with the same title.</string>
 </resources>
