change icon app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MarvelApp</string>
+    <string name="app_name">Heroes</string>
     <string name="hello">Hello !</string>
     <string name="intro">Get to know about your favorite Marvel characters, super heroes, and villains, also another information such as series, events and comics here</string>
     <string name="characters">Characters</string>
